--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
   <title>Internet Download Speed</title>
+  <link rel="icon" type="image/svg" href="/icon.svg"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
